tmp-prod-full/objects/PromotionPointLimit__c/PromotionPointLimit__c.object-meta.xml
<CustomObject>
    <label>프로모션 포인트 한도</label>
    <nameField>
        <label>프로모션 포인트 한도 이름</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>