tmp-prod-full/objects/PromotionPointLimit__c/fields/ErpSyncSkip__c.field-meta.xml
<CustomField>
    <fullName>ErpSyncSkip__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Erp_Sync_Skip</label>
    <type>Checkbox</type>
</CustomField>