tmp-prod-full/objects/PromotionPointLimit__c/fields/LoyaltyPgmCurrencySubtypeId__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyPgmCurrencySubtypeId__c</fullName>
    <label>포인트 유형</label>
    <referenceTo>LoyaltyPgmCurrencySubtype</referenceTo>
    <relationshipLabel>프로모션 포인트 한도</relationshipLabel>
    <relationshipName>PromotionLimits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>