tmp-prod-full/objects/PromotionPointLimit__c/fields/LoyaltyPgmCurrencySubtypeName__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyPgmCurrencySubtypeName__c</fullName>
    <formula>LoyaltyPgmCurrencySubtypeId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>포인트 유형 이름</label>
    <type>Text</type>
</CustomField>