tmp-prod-full/objects/PromotionPointLimit__c/fields/PromotionId__c.field-meta.xml
<CustomField>
    <fullName>PromotionId__c</fullName>
    <label>프로모션</label>
    <referenceTo>Promotion</referenceTo>
    <relationshipLabel>적용 가능 포인트</relationshipLabel>
    <relationshipName>PromotionLimits</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>