tmp-prod-full/objects/PromotionPointLimit__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>값</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>