tmp-prod-full/objects/PromotionPointLimit__c/validationRules/Cannot_Edit_Value_When_Type_Is_Basic.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Value_When_Type_Is_Basic</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Type__c, &quot;none&quot;),
    NOT(ISBLANK(Value__c))
)</errorConditionFormula>
    <errorMessage>유형 값이 &quot;기본&quot;일 경우 값을 입력할 수 없습니다.</errorMessage>
</ValidationRule>